// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TickBitmap #flipTick gas cost of flipping a tick that results in deleting a word 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 22208,
}
`;

exports[`TickBitmap #flipTick gas cost of flipping first tick in word to initialized 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 44120,
}
`;

exports[`TickBitmap #flipTick gas cost of flipping second tick in word to initialized 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 27020,
}
`;

exports[`TickBitmap #nextInitializedTickWithinOneWord lte = false gas cost for entire word 1`] = `2566`;

exports[`TickBitmap #nextInitializedTickWithinOneWord lte = false gas cost just below boundary 1`] = `2566`;

exports[`TickBitmap #nextInitializedTickWithinOneWord lte = false gas cost on boundary 1`] = `2566`;

exports[`TickBitmap #nextInitializedTickWithinOneWord lte = true gas cost for entire word 1`] = `2564`;

exports[`TickBitmap #nextInitializedTickWithinOneWord lte = true gas cost just below boundary 1`] = `2873`;

exports[`TickBitmap #nextInitializedTickWithinOneWord lte = true gas cost on boundary 1`] = `2564`;
